Implement a friendly fire toggle for each clan member. Not persistent after a restart.